# tradewar-sim

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TASKS.md  TRADE_WAR_2024_UPDATES.md  docker-compose.yml  introduction.md  pyproject.toml
examples/: README.md  modern_trade_scenarios.py
scripts/: generate_reports.py  run_api.py  run_dashboard.py  run_simulation.py
tests/: __init__.py  conftest.py  test_2024_features.py  test_agents.py  test_api.py  test_economics.py  test_llm.py  test_simulation.py
tradewar/: __init__.py  config.py
tradewar/agents/: __init__.py  base_agent.py  china_agent.py  factory.py  indonesia_agent.py  us_agent.py
tradewar/api/: __init__.py  schemas.py  server.py
tradewar/api/routes/: __init__.py  results.py  simulation.py
tradewar/data/: __init__.py  loaders.py
tradewar/data/baseline/: china_economy.json  indonesia_economy.json  us_economy.json
tradewar/economics/: __init__.py  gdp.py  models.py  tariff.py  trade_balance.py
tradewar/llm/: __init__.py  client.py  context.py  parser.py
tradewar/llm/prompts/: __init__.py  base_prompt.py  china_policy.py  indonesia_policy.py  us_trump_policy.py
tradewar/simulation/: __init__.py  engine.py  events.py  stability.py  state.py
tradewar/visualization/: __init__.py  dashboard.py  plots.py
