[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradewar-sim"
version = "0.1.0"
description = "A simulation of trade war dynamics between countries"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "plotly>=5.3.0",
    "streamlit>=1.0.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "python-dotenv>=0.19.0",
    "openai>=0.27.0",
    "pytest>=6.2.5",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black>=21.9b0",
    "isort>=5.9.3",
    "flake8>=3.9.2",
    "mypy>=0.910",
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/tradewar-sim"
"Bug Tracker" = "https://github.com/yourusername/tradewar-sim/issues"

[tool.setuptools]
packages = ["tradewar"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
