[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradewar-sim"
version = "0.1.0"
description = "A simulation of trade war dynamics between countries"
readme = "README.md"
authors = [
    {name = "Ginanjar Utama", email = "ginanjar.utama@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",  # Updated to a newer version
    "pandas>=1.4.0",  # Updated to a newer version
    "matplotlib>=3.5.0",  # Updated to a newer version
    "plotly>=5.4.0",  # Updated to a newer version
    "streamlit>=1.2.0",  # Updated to a newer version
    "fastapi>=0.70.0",  # Updated to a newer version
    "uvicorn>=0.17.0",  # Updated to a newer version
    "pydantic>=1.10.0",  # Updated to a newer version
    "python-dotenv>=0.21.0",  # Updated to a newer version
    "openai>=0.28.0",  # Updated to a newer version
    "pytest>=7.0.0",  # Updated to a newer version
    "weasyprint>=53.0",  # Added for PDF generation
    "litellm>=0.1.0"  # Added for LLM integration
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black>=21.9b0",
    "isort>=5.9.3",
    "flake8>=3.9.2",
    "mypy>=0.910",
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
]

[project.urls]
"Homepage" = "https://github.com/gutama/tradewar-sim"
"Bug Tracker" = "https://github.com/gutama/tradewar-sim/issues"

[tool.setuptools]
packages = ["tradewar"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
